# whiteboard

./: .gitignore  Makefile  README.md  main.spec  pyproject.toml  run_app.py
.kiro/hooks/: make-check-hook.kiro.hook
.kiro/specs/digital-whiteboard/: design.md  requirements.md  tasks.md
.kiro/specs/image-support/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: icon.icns
src/whiteboard/: __init__.py  canvas.py  connection_item.py  goto_dialog.py  image_item.py  image_resize_handle.py  main_window.py  navigation_panel.py  note_item.py  note_style_dialog.py  session_manager.py  state_manager.py  style_manager.py
src/whiteboard/commands/: base.py  connection_commands.py  delete_commands.py  image_commands.py  note_commands.py  stack.py
src/whiteboard/utils/: __init__.py  config_paths.py  exceptions.py  logging_config.py
tests/: test_auto_save.py  test_canvas.py  test_config_paths.py  test_connection_creation.py  test_connection_item.py  test_connection_updates.py  test_context_menu.py  test_exceptions.py  test_logging_config.py  test_main_window.py  test_navigation_aids.py  test_note_creation.py  test_note_item.py  test_note_movement.py  test_note_style_dialog.py  test_session_manager.py  test_session_manager_images.py  test_state_manager.py  test_style_manager.py
